<resources>
    <string name="app_name">Macrogamia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_products">Produits</string>
    <string name="productsText">Découvrez notre catalogue de produits</string>
    <string name="menu_map">Nos magasins</string>
    <string name="mapText">Trouvez le magasin le plus proche de chez vous</string>
    <string name="menu_account">Mon compte</string>
    <string name="action_settings">Settings</string>
    <string name="search_text">Affiner la recherche</string>
    <string name="search_type_text">Type d\'objet :</string>
    <string name="search_all_types">Tous les types</string>
    <string name="search_sort_text">Trier par :</string>
    <string name="search_shop_text">Produits de :</string>
    <string name="search_all_shops">Tous les magasins</string>
    <string name="productDialogShopListText">Magasins ayant ce produit en stock : </string>
    <string name="shopDialogHoursListText">Horaires d\'ouverture : </string>
    <string name="connection">Se connecter</string>
    <string name="deconnection">Se déconnecter</string>
    <string name="mail">Adresse mail</string>
    <string name="password">Mot de passe</string>
    <string name="connectionErrorMail">Adresse mail incorrecte</string>
    <string name="connectionErrorPassword">Mot de passe incorrect</string>
    <string name="fidelityPoints">Points de fidélités :</string>
    <string name="welcome">Bienvenue !</string>
    <string name="rememberMe">Se souvenir de moi</string>
    <string name="account_infos">Mes informations</string>
    <string name="account_advantages">Gestion de mes points de fidélité</string>
    <string name="notification_Title">Avantages fidélité disponibles !</string>
    <string name="notification_Content">Venez découvrir vos avantages fidélité.</string>
    <string name="account_firstname">Prénom : </string>
    <string name="account_lastname">Nom : </string>
    <string name="account_mail">Adresse mail : </string>
    <string name="account_notifications">Notifications</string>
</resources>
