<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:padding="10dp" >

    <EditText
        android:id="@+id/connectionDialogMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail" />

    <EditText
        android:id="@+id/connectionDialogPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/connectionDialogMail"/>

    <CheckBox
        android:id="@+id/connectionDialogRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberMe"
        android:layout_below="@id/connectionDialogPassword" />

    <TextView
        android:id="@+id/connectionDialogError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/connectionDialogError"
        android:layout_below="@id/connectionDialogRemember"
        android:visibility="gone" />

    <Button
        android:id="@+id/connectionDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:layout_below="@id/connectionDialogError"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>