<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.unice.polytech.si3.gregorymerlet.enseigne.MainActivity"
    android:padding="10dp" >

    <TextView
        android:id="@+id/accountFirstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_firstname"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/accountFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/accountFirstNameText"
        android:layout_alignTop="@id/accountFirstNameText"
        android:text="Test"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/accountLastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountFirstNameText"
        android:text="@string/account_lastname"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/accountLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/accountLastNameText"
        android:layout_alignTop="@id/accountLastNameText"
        android:text="Test"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/accountMailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountLastNameText"
        android:text="@string/account_mail"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/accountMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/accountMailText"
        android:layout_alignTop="@id/accountMailText"
        android:text="Test"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/accountNotificationsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountMailText"
        android:text="@string/account_notifications"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"/>

    <ToggleButton
        android:id="@+id/accountNotificationsToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/accountMailText"
        android:text="ToggleButton"
        android:checked="true" />

</RelativeLayout>
