<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/header"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connectedUserLayout"
        android:gravity="bottom"
        android:layout_margin="10dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/connectedUserLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="Android Studio"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/connectedUserLayoutMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/connectedUserLayoutName"
            android:text="android.studio@android.com" />

        <TextView
            android:id="@+id/connectedUserLayoutFidelityPointsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/connectedUserLayoutMail"
            android:layout_marginTop="10dp"
            android:text="@string/fidelityPoints"/>

        <TextView
            android:id="@+id/connectedUserLayoutFidelityPointsAppendice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="pts"
            android:textSize="20dp"
            android:layout_below="@id/connectedUserLayoutFidelityPointsText"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/connectedUserLayoutFidelityPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="20dp"
            android:layout_marginEnd="5dp"
            android:layout_below="@id/connectedUserLayoutFidelityPointsText"
            android:layout_toStartOf="@id/connectedUserLayoutFidelityPointsAppendice" />

        <Button
            android:id="@+id/deconnectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/connectedUserLayoutFidelityPoints"
            android:layout_alignParentEnd="true"
            android:text="@string/deconnection"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/noUserLayout"
        android:layout_margin="10dp"
        android:gravity="center"
        android:visibility="visible">
        <TextView
            android:id="@+id/noUserLayoutWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/connectionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/noUserLayoutWelcome"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:text="@string/connection"/>
    </RelativeLayout>

</RelativeLayout>
