<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    tools:context="fr.unice.polytech.si3.gregorymerlet.enseigne.MainActivity"
    android:paddingTop="55dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/searchLayout"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/search_text"
            android:textSize="20dp"
            android:gravity="center"/>
        <ImageButton
            android:id="@+id/openSearchButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:src="@drawable/ic_keyboard_arrow_down"
            android:scaleType="fitXY"
            android:background="@null" />
    </RelativeLayout>

    <GridView
        android:id="@+id/productsGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/searchLayout" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/searchContent"
        android:layout_below="@id/searchLayout"
        android:background="@color/searchContent">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_type_text"
                    android:id="@+id/searchTypeText"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/searchTypeRadioGroup"
                    android:layout_below="@id/searchTypeText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_sort_text"
                    android:id="@+id/searchSortText"
                    android:layout_below="@id/searchTypeRadioGroup"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/searchSortRadioGroup"
                    android:layout_below="@id/searchSortText"
                    android:checkedButton="@+id/defaultSortButton" >
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nom croissant"
                        android:id="@+id/defaultSortButton"
                        android:tag="name true" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nom décroissant"
                        android:tag="name false" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Prix croissant"
                        android:tag="price true" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Prix décroissant"
                        android:tag="price false" />
                </RadioGroup>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
